--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 sudo: false
 language: ruby
 rvm:
-  - 2.5.0
-before_install: gem install bundler -v 1.16.1
+  - 2.4.1
+  - 2.5.1
+before_install:
+  - gem install bundler -v 1.16.1
+
+branches:
+  only:
+    - master
